# Semantic-Policy-Engine

./: .gitignore  CITATION.cff  README.md  REPRODUCIBILITY.md  pytest.ini  run_phase2.py
opa-derived-baseline/: README.md  pyproject.toml  requirements.txt  run_validation.py
opa-derived-baseline/data/: enterprise.json  ontology_ref.ttl
opa-derived-baseline/input/: deploy_break_glass_allowed.json  deploy_during_freeze_denied.json  deploy_no_exception_denied.json  deploy_no_freeze_allowed.json  deploy_prod.json  deploy_prod_approved.json  query_logs_prod.json  query_logs_sensitive_obligation.json  query_logs_staging_allowed.json  read_public_allowed.json  restart_allowed.json  restart_break_glass_allowed.json  restart_customer_facing.json  restart_denied.json  restart_dev_allowed.json  restart_in_maintenance_allowed.json  restart_new_prod_server.json  restart_staging_allowed.json  skill_admin_tool_review.json  skill_credential_harvester_denied.json  skill_finance_write_bundled_review.json  skill_postload_denied.json  skill_prompt_injector_denied.json
opa-derived-baseline/policies/: agent_policy.rego
opa-derived-baseline/tests/: test_opa_derived_scenarios.py
opa-set-baseline/: README.md  pyproject.toml  run_validation.py
opa-set-baseline/input/: deploy_break_glass_allowed.json  deploy_no_exception_denied.json  deploy_no_freeze_allowed.json  deploy_prod_approved.json  deploy_staging_allowed.json  query_logs_sensitive_obligation.json  query_logs_staging_allowed.json  query_logs_staging_no_audit.json  query_logs_with_audit_allowed.json  read_public_allowed.json  restart_active_incident.json  restart_break_glass_allowed.json  restart_break_glass_expired.json  restart_customer_facing.json  restart_in_maintenance_allowed.json  restart_staging_allowed.json  skill_hidden_exfil_denied.json  skill_preload_review.json  skill_prompt_injector_denied.json  skill_safe_read_allowed.json  skill_unknown_provenance_review.json
opa-set-baseline/policies/: agent_policy.rego
opa-set-baseline/tests/: test_opa_set_scenarios.py  test_scenarios.py
semantic-mvp/: LICENSE  README.md  pyproject.toml  requirements.txt  run_validation.py
semantic-mvp/data/: enterprise.ttl  ontology.ttl
semantic-mvp/examples/: expected_outputs.md
semantic-mvp/shapes/: policy_shapes.ttl
semantic-mvp/tests/: test_scenarios.py  test_semantic_scenarios.py
(+103 files in other folders)
