[project]
name = "opa-policy-baseline"
version = "0.1.0"
description = "OPA/Rego baseline for comparing manual vs. OWL-inferred semantic policy encoding"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "regopy>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
