[project]
name = "semantic-agent-policy-mvp"
version = "0.1.0"
description = "Local MVP for RDF/OWL/SHACL semantic policy validation of AI agent actions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rdflib>=7.0.0",
    "pyshacl>=0.26.0",
    "owlrl>=6.0.2"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
