[project]
name = "semantic-agent-policy-mvp"
version = "0.1.0"
description = "Local MVP for RDF/OWL/SHACL semantic policy validation of AI agent actions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rdflib==7.6.0",
    "pyshacl==0.28.1",
    "owlrl==6.0.2"
]

[project.optional-dependencies]
dev = ["pytest==8.3.5"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
